// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`@nx/remix/plugin Remix Classic Compiler non-root project should create nodes 1`] = `
[
  [
    "my-app/remix.config.cjs",
    {
      "projects": {
        "my-app": {
          "metadata": {},
          "root": "my-app",
          "targets": {
            "build": {
              "cache": true,
              "command": "remix build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "@remix-run/dev",
                  ],
                },
              ],
              "options": {
                "cwd": "my-app",
              },
              "outputs": [
                "{workspaceRoot}/my-app/build",
                "{workspaceRoot}/my-app/public/build",
              ],
            },
            "build-deps": {
              "dependsOn": [
                "^build",
              ],
            },
            "dev": {
              "command": "remix dev --manual",
              "continuous": true,
              "options": {
                "cwd": "my-app",
              },
            },
            "serve-static": {
              "command": "remix-serve build/index.js",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": "my-app",
              },
            },
            "start": {
              "command": "remix-serve build/index.js",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": "my-app",
              },
            },
            "tsc": {
              "cache": true,
              "command": "tsc --noEmit",
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "typescript",
                  ],
                },
              ],
              "metadata": {
                "description": "Runs type-checking for the project.",
                "help": {
                  "command": "npx tsc --help",
                  "example": {
                    "options": {
                      "noEmit": true,
                    },
                  },
                },
                "technologies": [
                  "typescript",
                ],
              },
              "options": {
                "cwd": "my-app",
              },
            },
            "watch-deps": {
              "command": "npx nx watch --projects my-app --includeDependentProjects -- npx nx build-deps my-app",
              "continuous": true,
              "dependsOn": [
                "build-deps",
              ],
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/remix/plugin Remix Classic Compiler non-root project should infer watch-deps target 1`] = `
[
  [
    "my-app/remix.config.cjs",
    {
      "projects": {
        "my-app": {
          "metadata": {},
          "root": "my-app",
          "targets": {
            "build": {
              "cache": true,
              "command": "remix build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "@remix-run/dev",
                  ],
                },
              ],
              "options": {
                "cwd": "my-app",
              },
              "outputs": [
                "{workspaceRoot}/my-app/build",
                "{workspaceRoot}/my-app/public/build",
              ],
            },
            "build-deps": {
              "dependsOn": [
                "^build",
              ],
            },
            "dev": {
              "command": "remix dev --manual",
              "continuous": true,
              "options": {
                "cwd": "my-app",
              },
            },
            "serve-static": {
              "command": "remix-serve build/index.js",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": "my-app",
              },
            },
            "start": {
              "command": "remix-serve build/index.js",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": "my-app",
              },
            },
            "tsc": {
              "cache": true,
              "command": "tsc --noEmit",
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "typescript",
                  ],
                },
              ],
              "metadata": {
                "description": "Runs type-checking for the project.",
                "help": {
                  "command": "npx tsc --help",
                  "example": {
                    "options": {
                      "noEmit": true,
                    },
                  },
                },
                "technologies": [
                  "typescript",
                ],
              },
              "options": {
                "cwd": "my-app",
              },
            },
            "watch-deps": {
              "command": "npx nx watch --projects my-app --includeDependentProjects -- npx nx build-deps my-app",
              "continuous": true,
              "dependsOn": [
                "build-deps",
              ],
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/remix/plugin Remix Classic Compiler root project should create nodes 1`] = `
[
  [
    "remix.config.cjs",
    {
      "projects": {
        ".": {
          "metadata": {},
          "root": ".",
          "targets": {
            "build": {
              "cache": true,
              "command": "remix build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "@remix-run/dev",
                  ],
                },
              ],
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{workspaceRoot}/build",
                "{workspaceRoot}/public/build",
              ],
            },
            "dev": {
              "command": "remix dev --manual",
              "continuous": true,
              "options": {
                "cwd": ".",
              },
            },
            "serve-static": {
              "command": "remix-serve build/index.js",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": ".",
              },
            },
            "start": {
              "command": "remix-serve build/index.js",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": ".",
              },
            },
            "typecheck": {
              "cache": true,
              "command": "tsc --noEmit",
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "typescript",
                  ],
                },
              ],
              "metadata": {
                "description": "Runs type-checking for the project.",
                "help": {
                  "command": "npx tsc --help",
                  "example": {
                    "options": {
                      "noEmit": true,
                    },
                  },
                },
                "technologies": [
                  "typescript",
                ],
              },
              "options": {
                "cwd": ".",
              },
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/remix/plugin Remix Vite Compiler non-root project should create nodes 1`] = `
[
  [
    "my-app/vite.config.js",
    {
      "projects": {
        "my-app": {
          "metadata": {},
          "root": "my-app",
          "targets": {
            "build": {
              "cache": true,
              "command": "remix vite:build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "@remix-run/dev",
                  ],
                },
              ],
              "options": {
                "cwd": "my-app",
              },
              "outputs": [
                "{workspaceRoot}/my-app/build",
              ],
            },
            "build-deps": {
              "dependsOn": [
                "^build",
              ],
            },
            "dev": {
              "command": "remix vite:dev",
              "continuous": true,
              "options": {
                "cwd": "my-app",
              },
            },
            "serve-static": {
              "command": "remix-serve build/server/index.js",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": "my-app",
              },
            },
            "start": {
              "command": "remix-serve build/server/index.js",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": "my-app",
              },
            },
            "tsc": {
              "cache": true,
              "command": "tsc --noEmit",
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "typescript",
                  ],
                },
              ],
              "metadata": {
                "description": "Runs type-checking for the project.",
                "help": {
                  "command": "npx tsc --help",
                  "example": {
                    "options": {
                      "noEmit": true,
                    },
                  },
                },
                "technologies": [
                  "typescript",
                ],
              },
              "options": {
                "cwd": "my-app",
              },
            },
            "watch-deps": {
              "command": "npx nx watch --projects my-app --includeDependentProjects -- npx nx build-deps my-app",
              "continuous": true,
              "dependsOn": [
                "build-deps",
              ],
            },
          },
        },
      },
    },
  ],
]
`;

exports[`@nx/remix/plugin Remix Vite Compiler root project should create nodes 1`] = `
[
  [
    "vite.config.js",
    {
      "projects": {
        ".": {
          "metadata": {},
          "root": ".",
          "targets": {
            "build": {
              "cache": true,
              "command": "remix vite:build",
              "dependsOn": [
                "^build",
              ],
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "@remix-run/dev",
                  ],
                },
              ],
              "options": {
                "cwd": ".",
              },
              "outputs": [
                "{workspaceRoot}/build",
              ],
            },
            "dev": {
              "command": "remix vite:dev",
              "continuous": true,
              "options": {
                "cwd": ".",
              },
            },
            "serve-static": {
              "command": "remix-serve build/server/index.js",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": ".",
              },
            },
            "start": {
              "command": "remix-serve build/server/index.js",
              "continuous": true,
              "dependsOn": [
                "build",
              ],
              "options": {
                "cwd": ".",
              },
            },
            "typecheck": {
              "cache": true,
              "command": "tsc --noEmit",
              "inputs": [
                "production",
                "^production",
                {
                  "externalDependencies": [
                    "typescript",
                  ],
                },
              ],
              "metadata": {
                "description": "Runs type-checking for the project.",
                "help": {
                  "command": "npx tsc --help",
                  "example": {
                    "options": {
                      "noEmit": true,
                    },
                  },
                },
                "technologies": [
                  "typescript",
                ],
              },
              "options": {
                "cwd": ".",
              },
            },
          },
        },
      },
    },
  ],
]
`;
